--- a/FrontEndMentorsChallenges/base-apparel-coming-soon-master/style.css
+++ b/FrontEndMentorsChallenges/base-apparel-coming-soon-master/style.css
@@ -1,157 +1,192 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
-*,
-*::before,
-*::after{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 :root{
     --Desaturated-Red: hsl(0, 36%, 70%);
     --Soft-Red: hsl(0, 93%, 68%);
     --Dark-Grayish-Red: hsl(0, 6%, 24%);
-
-    /* - Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)
-- Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%) */
 }
 
-
-body{
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
     font-family: 'Josefin Sans';
-    /* background-color: #666; */
 }
-
-
-.container{
-    max-width: 375px;
-    width: 100%;
-    margin:0 auto;
+body{
     background-color: #fff;
-    height: 100vh;
-    position: relative;
-    box-shadow: 0 2px 10px rgb(172, 71, 86);
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
 }
-.logo{
-    background: url('./images/logo.svg')center no-repeat;
-    background-size: contain;
-    height: 100%;
-    margin-left: 10px;
-    width:100px;
-}
-.header{
-    height: 50px;
+.container{
+    background-color: #fff;
+    max-width: 375px;
+    height: 100vh;
     background-image: linear-gradient(135deg,hsl(0, 0%, 100%),hsl(0, 100%, 98%));
-
+    position: relative;
+    box-shadow: 0px 2px 10px hsl(0, 74%, 74%);
 }
+.section{
+    padding: 20px;
+    height: 10px;
+    /* background-color: green; */
+    display: flex;
+    align-items: center;
+}
+.section img{
+    height: 30px;
+    /* background-color: red; */
+}
+
 .image{
     background: url('./images/hero-mobile.jpg')center no-repeat;
     background-size: cover;
+    height: 240px;
     width: 100%;
-    height:250px;
 }
-
 .section{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    padding:30px 30px 0px 30px;
-    height: 60%;
+    padding: 30px 50px;
     text-align: center;
-    background-image: url('./images/bg-pattern-desktop.svg');
 }
-.title .upper{
-    display: block;
-    font-size: 35px;
-    letter-spacing: 5px;
-    text-transform: uppercase;
+.section .title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+.section .title .upper{
     color: var(--Desaturated-Red);
-    padding: 10px 0 0 0;
-}
-.title .lower{
-    display: block;
-    letter-spacing: 4px;
-    font-weight: 600;
-    font-size: 40px;
     text-transform: uppercase;
-    margin-bottom: 10px;
+    
+    letter-spacing: 5px;
+    margin-bottom: 5px;
+}
+.section .title .lower{
+    color: var(--Dark-Grayish-Red);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-weight: 900;
+    margin-bottom: 5px;
+
 }
 .text{
     font-weight: 600;
-    color: var(--Desaturated-Red) ;
-    margin-bottom: 10px;
+    color:var(--Desaturated-Red);
+    font-size: 13px;
+    line-height: 20px;
 }
-.form{
+form{
     display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 98%;
-}
-
-.form .formInput{
-    padding: 15px 20px;
-    border-radius: 25px;
-    border: 1px solid var(--Desaturated-Red);
-    width: 100%;
-    background-color: inherit;
-    position: relative;
-    outline: 0;
-    font-size: 16px;
-}
-small{
-    visibility: hidden;
-    display: flex;
-    width: 100%;
     align-items: center;
-    align-self: flex-start;
-    margin-left: 15px;
-    margin-top: 2px;
-    font-weight: bold;
-    color: hsl(0, 74%, 74%);
-}
+    /* justify-content: center; */
+    width: 100%;
+    position: relative;
+    margin-top: 10px;
 
-small img{
-    margin-left: 10px;
 }
-
-small.error{
-    visibility: visible;
-    transition: all 2s;
+form .formInput{
+    padding:12px ;
+    width: 100%;
+    border: 1px solid var(--Desaturated-Red);
+    border-radius: 27px;
+    font-size: 14px;
+    outline: 0;
+    background-color: inherit;
 }
-
-.formInput.success{
-    border-color: hotpink;
-}
-.form .formInput::placeholder{
-    color: var(--Desaturated-Red);
-}
-
-.form button{
+form #btn{
+    padding: 3px;
     position: absolute;
-    right: 0;
-    height: 100%;
-    background:linear-gradient(135deg,hsl(0, 80%, 86%),hsl(0, 74%, 74%));
-    border: none;
-    padding: 0 25px;
-    border-radius: 30px;
+    right: 0px;
+    background:linear-gradient(135deg,hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    border-radius: 27px;
+    width: 70px;
+    border: 0;
     outline: 0;
 }
 
-footer .attribution { 
-    font-size: 14px; 
-    text-align: center; 
+.footer{
     position: absolute;
-    bottom: 2px;
-    margin: 0 auto;
+    bottom: 0;
     width: 100%;
 }
-.attribution a {
-     color:var(--Soft-Red) ;
- }
+
+small{
+    margin-top: 5px;
+    text-align: left;
+    width: 100%;
+    color: hsl(0, 74%, 74%);
+    font-weight: 600;
+}
+.footer .attribution{
+    font-size: 14px;
+    padding: 0px 5px;
+    text-align: center;
+}
+
+.footer .attribution a{
+    color: hsl(0, 74%, 74%);
+    font-weight: 600;
+}
+@media screen and (min-width:376px) {
+    body{
+    background-image: linear-gradient(135deg,hsl(0, 0%, 100%),hsl(0, 100%, 98%));
+        
+    }
+    
+    .container{
+        max-width: 1440px;
+        background:url('./images/bg-pattern-desktop.svg')center no-repeat;
+        background-size: cover;
+        width: 100%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+        grid-auto-rows: minmax(10px,auto);
+        grid-template-areas: 
+        'header header header image image image'
+        'section section section image image image'
+        'section section section image image image'
+        'section section section image image image'
+        'section section section image image image'
+        'section section section image image image'
+        'section section section image image image'
+        ;
+    }
+    .header{
+        grid-area: header;
+        padding-left: 60px;
+        padding-top: 30px;
+    }
+    .image{
+        grid-area: image;
+        background: url('./images/hero-desktop.jpg')center no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+
+    .section{
+        grid-area: section;
+        padding:60px 150px 0px 60px;
+
+    }
+    .form{
+        margin-top: 50px;
+    }
+    .section .title .upper{
+        letter-spacing: 20px;
+    }
+
+    .footer .attribution{
+        font-size: 20px;
+    }
+
+    .footer .attribution a{
+        color: hsl(0, 93%, 68%);
+    }
+}
