--- a/FrontEndMentorsChallenges/base-apparel-coming-soon-master/style.css
+++ b/FrontEndMentorsChallenges/base-apparel-coming-soon-master/style.css
@@ -50,7 +50,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 50px;
+    padding: 30px 40px;
     text-align: center;
 }
 .section .title{
@@ -91,7 +91,7 @@ form{
 
 }
 form .formInput{
-    padding:12px ;
+    padding:14px ;
     width: 100%;
     border: 1px solid var(--Desaturated-Red);
     border-radius: 27px;
@@ -100,7 +100,7 @@ form .formInput{
     background-color: inherit;
 }
 form #btn{
-    padding: 3px;
+    padding: 5.5px;
     position: absolute;
     right: 0px;
     background:linear-gradient(135deg,hsl(0, 80%, 86%), hsl(0, 74%, 74%));
@@ -122,7 +122,12 @@ small{
     width: 100%;
     color: hsl(0, 74%, 74%);
     font-weight: 600;
+    visibility: hidden;
 }
+small.error{
+    visibility: visible;
+}
+
 .footer .attribution{
     font-size: 14px;
     padding: 0px 5px;
@@ -132,6 +137,19 @@ small{
 .footer .attribution a{
     color: hsl(0, 74%, 74%);
     font-weight: 600;
+}
+.sign{
+    background: url('./images/icon-error.svg')center no-repeat;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    right: 80px;
+}
+.form .sign{
+    visibility: hidden;
+}
+.form.error .sign{
+    visibility: visible;
 }
 @media screen and (min-width:376px) {
     body{
@@ -173,7 +191,6 @@ small{
     .section{
         grid-area: section;
         padding:60px 150px 0px 60px;
-
     }
     .form{
         margin-top: 50px;
