--- a/FrontEndMentorsChallenges/intro-component-with-signup-form-master/style1.css
+++ b/FrontEndMentorsChallenges/intro-component-with-signup-form-master/style1.css
@@ -41,7 +41,7 @@
 
     footer{
         position: absolute;
-        bottom: 0;
+        bottom: 0px;
     }
     .attribution{
         font-size: 20px;
